2002-12-02  OGASAWARA, Takeshi  <t-ogs@earth.email.ne.jp>

	* src/rbgtkiconfactory.c: Add a file.
	* src/rbgtkiconset.c: Add a file.
	* src/rbgtkiconsource.c: Add a file.
	* src/rbgtkiconsize.c: Add a file.
	* src/rbgtktextbuffer.c: Fix a small bug.

2002-12-02  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtklabel.c: Support mnemonic label in Gtk::Label#initialize, #set_text.
	Add Gtk::Label#set_markup, #layout_offsets, #select_region, #layout, selection_bounds
	* src/rbgtktooltips.c: Add Gtk::Tooltips.get_data().
	* sample/misc/label.rb: Add a file.

2002-12-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkimagemenuitem.c: Support mnemonic label, stockitem in #initialize.
	* src/rbgtkmenuitem.c, rbgtkradiomenuitem.c, rbgtkcheckmenuitem.c: 
	Support mnemonic label in #initialize.
	* src/rbgtkmenuitem.c: Add Gtk::MenuItem#set_accel_path, #remove_submenu, 
	#toggle_size_request.
	* sample/misc/cursor.rb: Code clean up.
	* sample/misc/button2.rb: Add a file.
	* sample/misc/togglebutton.rb, checkbutton.rb, radiobutton.rb: 
	Add sample for mnemonic label and stock item.
	* src/rbgtkbutton.c, rbgtktogglebutton.c, rbgtkcheckbutton.c, rbgtkradiobutton.c: 
	Support mnemonic label or stock item in #initialize.
	* extconf.rb: Fix compile error about rbgdkcursor.h.
	Reported by Thorsten Roggendorf <schrotie@uni-bielefeld.de>, Bugs item #643915.

2002-11-29  OGASAWARA, Takeshi  <t-ogs@earth.email.ne.jp>

	* src/rbgtktextbuffer.c: Add Gtk::TextBuffer#insert_pixbuf,
	#insert_child_anchor, #create_child_anchor, #add_selection_clipboard,
	#remove_selection_clipboard, #cut_clipboard, #copy_clipboard,
	#paste_clipboard, #get_iter_at_child_anchor.
	* src/rbgtk.h: Add GTK_TYPE_CLIPBOARD.
	* src/rbgtktextattributes.c: Add file.
	* src/rbgtkclipboard.c: Add file.

2002-11-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkkeysyms/*: Abolished. Create rbgdkkeysyms.h instead.
	* extconf.rb: Follow above changes.
	* makegdkkeysyms.h: Append constants of Key symbols to Gdk::Keyval.