@@ -8,6 +8,7 @@
 
 2002-12-02  Masao Mutoh  <mutoh@highway.ne.jp>
 
+	* sample/misc/stock.rb, sample/testgtk/savedposition.rb: Follow Gtk::Label changes.
 	* src/rbgtklabel.c: Support mnemonic label in Gtk::Label#initialize, #set_text.
 	Add Gtk::Label#set_markup, #layout_offsets, #select_region, #layout, selection_bounds
 	* src/rbgtktooltips.c: Add Gtk::Tooltips.get_data().
